--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="ogadonate"
       content="donation platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<link rel="manifest" href="/app.webmanifest">
    
     <title>Ogadonate</title>
     
